--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,63 @@
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons";
 
+// @media (min-width: 768px) {
+//   $btn-font-size: 3em !global;
+// }
+
+@import "../node_modules/bootstrap/scss/bootstrap";
+@font-face {
+  font-family: "digitalDisplay";
+  src: url("digital-7.regular.ttf");
+}
+
 #root {
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #2ecc71;
+}
+
+.App {
+  background-color: #2c3e50;
+  height: 80vh;
+  width: 80vw;
+  @media (max-width: 768px) {
+    height: 95vh;
+    width: 95vw;
+  }
+  max-width: 800px;
+}
+
+#display-container {
+  background-color: #1e272e;
+  font-family: "digitalDisplay";
+  font-size: 3rem;
+  color: #f12b2b;
+  @media (min-width: 768px) and (min-height: 800px) {
+    font-size: 5rem;
+  }
+}
+
+#smallDisplay {
+  font-size: 0.5em;
+  min-height: 1.5em;
+  line-height: 1.1em;
+}
+
+#display {
+  line-height: 1.1em;
+}
+
+.grid-container {
+  flex: 1;
 }
 
 #buttons-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas:
     "clear clear delete add"
     "seven eight nine subtract"
@@ -19,6 +65,11 @@
     "one two three divide"
     "zero decimal equals equals";
   grid-gap: 10px;
+  .btn {
+    @media (min-width: 768px) and (min-height: 800px) {
+      font-size: 3rem;
+    }
+  }
 }
 
 #equals {
